--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,16 @@
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    
+    <form class="search-form" id="search-form">
+      <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
+      <button type="submit">Search</button>
+    </form>
+
+    <div class="gallery">
+      <!-- Карточки изображений -->
+    </div>
+
+    <div id="sentinel"></div>
+    <button type="button" class="load-more is-hidden">Load more</button>
   </body>
 </html>
